--- a/index.html
+++ b/index.html
@@ -4,29 +4,70 @@
 <head>
     <meta charset="UTF-8">
     <title>Cybersecurity Lab Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-        body { font-family: Arial, sans-serif; margin: 40px; background: #f4f4f4; }
-        h1 { color: #333366; }
-        .lab { margin-bottom: 20px; padding: 15px; background: #ffffff; border-radius: 8px; box-shadow: 0 0 8px #ccc; }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: #f9f9f9;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            color: #2c3e50;
+        }
+        .lab-card {
+            background: #fff;
+            border: 1px solid #ddd;
+            border-left: 5px solid #6c5ce7;
+            margin-bottom: 20px;
+            padding: 15px;
+            border-radius: 4px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+        }
+        .lab-title {
+            font-size: 18px;
+            font-weight: bold;
+            color: #2d3436;
+        }
+        .lab-description {
+            margin-top: 5px;
+            color: #636e72;
+        }
     </style>
 </head>
 <body>
-    <h1>My Cybersecurity Lab Portfolio</h1>
-    <div class="lab">
-        <h2>GLAB 114.2.2 - Outlook.com Email</h2>
-        <p>Completed: Feb 27 at 11:51am</p>
-        <p>Description: Hands-on with Outlook email configuration and features.</p>
+    <h1>Cybersecurity Lab Portfolio</h1>
+    <div class="lab-card">
+        <div class="lab-title">GLAB 123.4.1 - Configure a Wireless Router and Client</div>
+        <div class="lab-description">Configured wireless settings and verified client connection using Packet Tracer.</div>
     </div>
-    <div class="lab">
-        <h2>GLAB 154.8.3 - Use a Port Scanner to Detect Open Ports</h2>
-        <p>Completed: Mar 28 at 11:32pm</p>
-        <p>Description: Nmap usage to scan open TCP/UDP ports and interpret output.</p>
+    <div class="lab-card">
+        <div class="lab-title">GLAB 154.8.3 - Use a Port Scanner to Detect Open Ports</div>
+        <div class="lab-description">Used Nmap to scan for open TCP/UDP ports and analyze scan output.</div>
     </div>
-    <div class="lab">
-        <h2>GLAB 125.2.3 - Implement Physical Security with IoT Devices</h2>
-        <p>Completed: Mar 12 at 9:48am</p>
-        <p>Description: Implementing surveillance and access control through IoT.</p>
+    <div class="lab-card">
+        <div class="lab-title">GLAB 125.3.2 - Configure Authentication and Authorization in Linux</div>
+        <div class="lab-description">Configured PAM and access controls on a Linux system for authentication management.</div>
     </div>
-    <p><em>More labs to be added soon!</em></p>
+    <div class="lab-card">
+        <div class="lab-title">GLAB 180.2.2 - Performing Threat Hunting</div>
+        <div class="lab-description">Demonstrated proactive threat hunting using logs, alerts, and behavioral patterns.</div>
+    </div>
+    <div class="lab-card">
+        <div class="lab-title">GLAB 181.5.3 - Assisted Lab: Performing Vulnerability Scanning</div>
+        <div class="lab-description">Conducted vulnerability assessments and interpreted scanning tool results.</div>
+    </div>
+    <div class="lab-card">
+        <div class="lab-title">GLAB 183.10.2 - Analyzing Potentially Malicious Files</div>
+        <div class="lab-description">Used static and dynamic analysis to investigate suspicious file behavior.</div>
+    </div>
+    <div class="lab-card">
+        <div class="lab-title">GLAB 200.2.1 - Splunk Fundamentals</div>
+        <div class="lab-description">Explored Splunk for security event indexing and querying using SPL.</div>
+    </div>
+    <div class="lab-card">
+        <div class="lab-title">GLAB 127.6.2 - Attack Analysis</div>
+        <div class="lab-description">Performed forensic log review and identified malicious activity.</div>
+    </div>
 </body>
 </html>
